# dockapps

Temperature.app/: Temperature.h
wmbiff/: ChangeLog  NEWS  configure.ac
wmbiff/wmbiff/: Imap4Client.c  Makefile.am  Pop3Client.c  test_tlscomm.c  test_wmbiff.c  tlsComm.c  wmbiff.c  wmbiff.h
wmclockmon/: .ChangeLog.swp  .gitignore  AUTHORS  BUGS  ChangeLog  ChangeLog-0.8.1  INSTALL  Makefile.am  Makefile.common.am  Makefile.in  NEWS  README  THANKS  TODO  configure  configure.ac
wmclockmon/debian/: changelog  control  copyright  docs  menu  rules
wmclockmon/doc/: Makefile.am  Makefile.in  sample1.wmclockmonrc  sample2.wmclockmonrc  wmclockmon-cal.1  wmclockmon-config.1  wmclockmon.1
wmclockmon/src/: .gitignore  Makefile.am  Makefile.in  backlightB_off.xpm  backlightB_on.xpm  backlightI_on.xpm  default.bwcs  dockapp.c  dockapp.h  main.c
wmclockmon/styles/: Makefile.am  Makefile.in  backlight0_off.xpm  backlight0_on.xpm  backlight1_off.xpm  backlight1_on.xpm  backlight2_off.xpm  backlight2_on.xpm  backlight3_off.xpm  backlight3_on.xpm  backlight4_off.xpm  backlight4_on.xpm  backlight5_off.xpm  backlight5_on.xpm  backlight6_off.xpm  backlight6_on.xpm  backlightB_color_off.xpm  backlightB_color_on.xpm  backlightB_new_off.xpm  backlightB_new_on.xpm  backlightB_off.xpm  backlightB_old_off.xpm  backlightB_old_on.xpm  backlightB_on.xpm  backlightI_color_off.xpm  backlightI_color_on.xpm  backlightI_off.xpm  backlight_0_color_off.xpm  backlight_0_color_on.xpm  backlight_1_color_off.xpm  backlight_1_color_on.xpm  backlight_2_color_off.xpm  backlight_2_color_on.xpm  backlight_3_color_off.xpm  backlight_3_color_on.xpm  backlight_4_color_off.xpm  backlight_4_color_on.xpm  backlight_5_color_off.xpm  backlight_5_color_on.xpm  backlight_6_color_off.xpm  (+33 more)
wmclockmon/wmclockmon-cal/: .gitignore  Makefile.am  Makefile.in  defines.h  main.c  main.h  mainwindow.c  mainwindow.h  tools.c  tools.h
wmclockmon/wmclockmon-config/: .gitignore  Makefile.am  Makefile.in  actions.c  actions.h  configfile.h  defines.h  dialogs.c  dialogs.h  edit.c  edit.h  main.c  mainwindow.c  mainwindow.h  tools.c  tools.h  variables.h
wmnet/: wmnet.c  wmnet.h
