# extra distribution files
dist_pkgdata_DATA = \
        backlight0_off.xpm \
        backlight0_on.xpm \
        backlight1_off.xpm \
        backlight1_on.xpm \
        backlight2_off.xpm \
        backlight2_on.xpm \
        backlight3_off.xpm \
        backlight3_on.xpm \
        backlight4_off.xpm \
        backlight4_on.xpm \
        backlight5_off.xpm \
        backlight5_on.xpm \
        backlight6_off.xpm \
        backlight6_on.xpm \
        backlightB_color_off.xpm \
        backlightB_color_on.xpm \
        backlightB_new_off.xpm \
        backlightB_new_on.xpm \
        backlightB_off.xpm \
        backlightB_on.xpm \
        backlightB_old_off.xpm \
        backlightB_old_on.xpm \
        backlightI_color_off.xpm \
        backlightI_color_on.xpm \
        backlightI_off.xpm \
        backlightI_on.xpm \
        backlight_0_color_off.xpm \
        backlight_0_color_on.xpm \
        backlight_1_color_off.xpm \
        backlight_1_color_on.xpm \
        backlight_2_color_off.xpm \
        backlight_2_color_on.xpm \
        backlight_3_color_off.xpm \
        backlight_3_color_on.xpm \
        backlight_4_color_off.xpm \
        backlight_4_color_on.xpm \
        backlight_5_color_off.xpm \
        backlight_5_color_on.xpm \
        backlight_6_color_off.xpm \
        backlight_6_color_on.xpm \
        default.bwcs \
        default.iwcs \
        default.lwcs \
        default.mwcs \
        default.pwcs \
        new.bwcs \
        new.lwcs \
        new.mwcs \
        new.pwcs \
        lcd1.mwcs \
        lcd2.mwcs \
        lcd3.mwcs \
        lcd4.mwcs \
        lcd5.mwcs \
        lcd6.mwcs \
        led.bwcs \
        led.iwcs \
        led.lwcs \
        led.pwcs \
        led0.mwcs \
        led1.mwcs \
        led2.mwcs \
        led3.mwcs \
        led4.mwcs \
        led5.mwcs \
        led6.mwcs \
        letters.xpm \
        letters_new.xpm \
        letters_color.xpm \
        parts.xpm \
        parts_new.xpm \
        parts_color.xpm
